# projetoFinal_back_end

./: README.md  docker-compose.yml  dockerfile  manage.py  nginx.conf  pyproject.toml  requirements.txt
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
twitter_corujinha/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
twitter_corujinha/core/: admin.py  apps.py  serializers.py  urls.py
twitter_corujinha/core/migrations/: 0001_initial.py  0002_alter_comment_options_alter_follow_options_and_more.py  0003_alter_user_location.py  0004_remove_user_birth_date_remove_user_location.py  0005_alter_comment_options_alter_follow_options_and_more.py  0006_alter_like_unique_together_remove_like_tweet_and_more.py  0007_alter_user_following_alter_user_groups_and_more.py  0008_alter_follow_followed_alter_follow_follower.py  0009_remove_tweet_likes_alter_follow_followed_and_more.py  0010_comment_core_commen_created_97080c_idx.py
twitter_corujinha/core/models/: __init__.py  comment.py  follow.py  like.py  tweet.py  user.py
twitter_corujinha/core/views/: __init__.py  authViewset.py  commentViewset.py  followViewset.py  likeViewset.py  tweetViewset.py  updateImage.py  userViewset.py
twitter_corujinha/twitter_corujinha/: asgi.py  settings.py  urls.py  wsgi.py
